# dephell_specifier

./: .gitignore  .travis.yml  README.md  Taskfile.yml  pyproject.toml  setup.cfg
dephell_specifier/: __init__.py  constants.py  git_specifier.py  range_specifier.py  specifier.py  utils.py
tests/: test_range_npm.py  test_range_specifier.py  test_specifier.py
