[tool.dephell.main]
from = {format = "poetry", path = "pyproject.toml"}
to = {format = "setuppy", path = "setup.py"}
tag = "v."

[tool.dephell.flake8]
from = {format = "pip", path = "requirements-flake.txt"}
command = "flake8"

[tool.dephell.typing]
from = {format = "poetry", path = "pyproject.toml"}
command = "mypy --ignore-missing-imports --allow-redefinition dephell_specifier"

[tool.dephell.pytest]
from = {format = "poetry", path = "pyproject.toml"}
tests = ["tests", "README.md"]
command = "pytest -x tests/"

[tool.poetry]
name = "dephell_specifier"
version = "0.2.2"
authors = ["Gram <mail@orsinium.dev>"]
description = "Work with version specifiers."
readme = "README.md"
license = "MIT"
repository = "https://github.com/dephell/dephell_venvs"
keywords = ["dephell", "packaging", "versioning", "semver", "version", "maven"]
# https://pypi.org/classifiers/
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: System :: Installation/Setup",

    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",

    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",

    "Operating System :: MacOS",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: Unix",
]

[tool.poetry.dependencies]
python = ">=3.6"
packaging = ">=17.1"
